Fix for jumpy pinned tabs

--- a/src/chrome/browser/browser.css
+++ b/src/chrome/browser/browser.css
@@ -2381,7 +2381,6 @@ toolbar:not([mode="text"]):not([iconsize="small"]) #navigator-throbber {
 .tabbrowser-arrowscrollbox > .scrollbutton-down {
   list-style-image: url("chrome://browser/skin/tabbrowser/tab-arrow-left.png");
   margin: 0;
-  padding-right: 2px;
   border-right: 2px solid transparent;
   background-origin: border-box;
 }
